s break point css fixes
middle page border was wrong color. Also bottom warning text size was too big. Corrected both things.

--- a/SCSS/partials/_emailSection.scss
+++ b/SCSS/partials/_emailSection.scss
@@ -197,6 +197,7 @@
 
         #submitEmail {
             height: 35px;
+            font-size: 0.8rem;
             @include mq("m") {
                 width: 150px;
                 align-self: center;
