--- a/SCSS/partials/_randomImageSection.scss
+++ b/SCSS/partials/_randomImageSection.scss
@@ -2,7 +2,7 @@
     width: 100%;
     // height: 100%;
     color: white;
-    border-bottom: solid 6px $tertiary;
+    border-bottom: solid 6px $quaternary;
 
     @include mq("l") {
         border-right: solid 6px $tertiary;
@@ -138,5 +138,9 @@
     h4 {
         display: none;
         align-self: center;
+        font-size: 0.8rem;
+        @include mq("m") {
+            font-size: 1rem;
+        } 
     }
 }
